# aiowrap

./: .travis.yml  Cargo.toml  README.md
src/: deque_reader.rs  lib.rs  short.rs
tests/: deck.rs
